Fixed title alignment

--- a/css/page.css
+++ b/css/page.css
@@ -21,7 +21,7 @@ body {
 h1 {
     font-size: 4.0em;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     margin: 0;
 }
 h3 {
